--- a/investix/ru/education/about-us.html
+++ b/investix/ru/education/about-us.html
@@ -99,8 +99,13 @@
         <div class="text__flex">
           <div class="text__human">
             <img src="../../img/human1.jpg" alt="Дмитрий Смирнов">
-            <b>Дмитрий Смирнов</b>
-            <p>Старший менеджер</p>
+            <b>Павел Гордеев</b>
+            <p>Старший трейдер</p>
+          </div>
+          <div class="text__human">
+            <img src="../../img/human6.jpg" alt="Виктор Астахов">
+            <b>Богдан Астахов</b>
+            <p>Старший трейдер</p>
           </div>
           <div class="text__human">
             <img src="../../img/human2.jpg" alt="Карина Ларина">
@@ -121,11 +126,6 @@
             <img src="../../img/human5.jpg" alt="Михаил Городецкий">
             <b>Михаил Городецкий</b>
             <p>Финансовый аналитик</p>
-          </div>
-          <div class="text__human">
-            <img src="../../img/human6.jpg" alt="Виктор Астахов">
-            <b>Виктор Астахов</b>
-            <p>Главный трейдер</p>
           </div>
         </div>
       </div>
