--- a/investix/ru/education/exchange-consulting.html
+++ b/investix/ru/education/exchange-consulting.html
@@ -77,13 +77,14 @@
     </div>
   </header>
   <main class="inner">
-    <section class="inner__title  inner__title--img1">
+    <section class="inner__title">
       <div class="container">
         <h1 class="inner__name">Биржевой консалтинг</h1>
       </div>
     </section>
     <section class="text">
       <div class="container">
+        <img src="../../img/exch.jpg" width="100%" alt="">
         <p class="text__small">Помощь клиентам в торговле финансовыми инструментами (валюта, CFD на акции мировых компаний-гигантов, лидеров в областях рынка, фондовые индексы, драгоценные металлы и энергоресуры.</p>
         <ul class="text__list">
           <li>Множество эффективных торговых стратегий индивидуально настроенных под Ваш стиль торговли</li>
