--- a/mm/index.html
+++ b/mm/index.html
@@ -62,8 +62,8 @@
               <a class="button  button--blue" href="https://clients.multiplymarket.com/">Log In</a>
               <a class="button  button--number" href="tel:++442038290032">+442038290032</a>
               <select class="main-nav__select" id="languageSelector">
-                  <option value="EN">EN</option>
-                  <option value="RU">RU</option>
+                  <option value="en">EN</option>
+                  <option value="ru">RU</option>
               </select>
             </div>
           </nav>
@@ -157,10 +157,10 @@
         <div class="trade__right">
           <video src="img/tel.mp4" autoplay muted loop></video>
           <div class="trade__link">
-            <a href="#" title="App Store">
+            <a href="https://itunes.apple.com/ua/app/forex-on-the-go/id963664270?l=ru&mt=12" title="App Store">
               <img src="img/trade-a.png" alt="App Store">
             </a>
-            <a href="#" title="Google Play">
+            <a href="https://play.google.com/store/apps/details?id=net.metaquotes.metatrader4" title="Google Play">
               <img src="img/trade-g.png" alt="Google Play">
             </a>
           </div>
@@ -258,6 +258,7 @@
     </div>
   </footer>
   <script src="js/jquery.min.js"></script>
+  <script src="js/jquery-plugin.js"></script>
   <script src="js/slick/slick.min.js"></script>
   <script src="js/slider.js"></script>
   <script src="js/language.js"></script>
