--- a/deep/index.html
+++ b/deep/index.html
@@ -8,30 +8,37 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
-  <header class="header">
-    <div class="container">
-      <nav class="nav">
-        <a class="nav__logo" href="#">DeepInLove.Date</a>
-        <button class="nav__toggle  nav__toggle--inactive">Open Menu</button>
-        <ul class="nav__list">
-          <li><a class="nav__item" href="#">About Us</a></li>
-          <li><a class="nav__item" href="#">Girls</a></li>
-          <li><a class="nav__item" href="#">Boys</a></li>
-          <li><a class="nav__item" href="#">Blog</a></li>
-        </ul>
-        <a class="button  button--small  button--red" href="#">Sign Up</a>
-      </nav>
-    </div>
-  </header>
   <main class="main">
     <div class="title">
-      <div class="container">
-        <section class="title__content">
-          <h1 class="title__name">DeepInLove.Date</h1>
-          <p class="title__text">For any aspect of self-improvement, there has to be a reason<br>for you to start and keep going.</p>
-          <a class="button  button--medium  button--black  title__button" href="#">Search Love</a>
-        </section>
-      </div>
+      <!-- <div class="container"> -->
+        <header class="header">
+          <div class="container">
+            <nav class="nav">
+              <a class="nav__logo" href="#">
+                <img src="img/logo.svg" width="300" height="39" alt="DeepInLove.Date">
+              </a>
+              <button class="nav__toggle  nav__toggle--inactive">Open Menu</button>
+              <ul class="nav__list">
+                <li><a class="nav__item" href="#">About Us</a></li>
+                <li><a class="nav__item" href="#">Girls</a></li>
+                <li><a class="nav__item  nav__item--white" href="#">Boys</a></li>
+                <li><a class="nav__item  nav__item--white" href="#">Blog</a></li>
+              </ul>
+              <a class="button  button--small  button--red" href="#">Sign Up</a>
+            </nav>
+          </div>
+        </header>
+        <div class="title__flex">
+          <div class="title__left">
+            <section class="title__content">
+              <h1 class="title__name">DeepInLove.Date</h1>
+              <p class="title__text">For any aspect of self-improvement, there has to be a reason<br>for you to start and keep going.</p>
+              <a class="button  button--medium  button--black  title__button" href="#">Search Love</a>
+            </section>
+          </div>
+          <div class="title__right"></div>
+        </div>
+      <!-- </div> -->
     </div>
     <div class="help">
       <div class="container">
