--- a/deep/index.html
+++ b/deep/index.html
@@ -93,13 +93,13 @@
       </nav>
     </div>
   </footer>
-  <section class="modal  modal--login  modal--inactive">
+  <!-- <section class="modal  modal--login  modal--inactive">
     <div class="modal__left"></div>
     <div class="modal__right">
       <button class="modal__close" type="button">Close</button>
       <form class="modal__form" action="" method="post">
         <h3 class="modal__name">Sign in</h3>
-        <input class="modal__input" type="text" name="Email" placeholder="Email">
+        <input class="modal__input" type="email" name="Email" placeholder="Email">
         <input class="modal__input" type="password" name="Password" placeholder="Password">
         <a class="modal__forgot" href="#">Forgot password?</a>
         <button class="button  button--small  button--red  modal__submit" type="submit" name="Submit">Sign in</button>
@@ -112,6 +112,32 @@
         </div>
       </div>
       <p class="modal__cta">Don't have an account? <a class="modal__link  modal__link--cta" href="#">Join</a></p>
+    </div>
+  </section> -->
+  <section class="modal  modal--register  modal--inactive">
+    <div class="modal__left"></div>
+    <div class="modal__right">
+      <button class="modal__close" type="button">Close</button>
+      <form class="modal__form" action="" method="post">
+        <h3 class="modal__name">Sign up</h3>
+        <input class="modal__input  modal__input--register" type="text" name="Name" placeholder="Name">
+        <input class="modal__input  modal__input--register" type="email" name="Email" placeholder="Email">
+        <div class="modal__password">
+          <input class="modal__input  modal__input--register" type="password" name="Password" placeholder="Create password">
+          <button class="modal__show" type="button"></button>
+        </div>
+        
+        <p class="modal__agree">By clicking "register" you agree with the Terms & Conditions and certify that I am at least 18 years old.</p>
+        <button class="button  button--small  button--red  modal__submit" type="submit" name="Submit">Sign in</button>
+      </form>
+      <div class="modal__social">
+        <b class="modal__another">Or Sign up as user</b>
+        <div class="modal__flex">
+          <a class="modal__link  modal__link--facebook" href="#">Facebook</a>
+          <a class="modal__link  modal__link--google" href="#">Google +</a>
+        </div>
+      </div>
+      <p class="modal__cta">Already have an account? <a class="modal__link  modal__link--cta" href="#">Login</a></p>
     </div>
   </section>
   <div class="modal__overlay  modal__overlay--inactive"></div>
