--- a/deep/index.html
+++ b/deep/index.html
@@ -140,11 +140,10 @@
           <input class="modal__input  modal__input--register" type="password" name="Password" placeholder="Create password">
           <button class="modal__show" type="button"></button>
         </div>
-        
         <p class="modal__agree">By clicking "register" you agree with the Terms & Conditions and certify that I am at least 18 years old.</p>
         <button class="button  button--small  button--red  modal__submit" type="submit" name="Submit">Sign in</button>
       </form>
-      <div class="modal__social">
+      <div class="modal__social  modal__social--register">
         <b class="modal__another">Or Sign up as user</b>
         <div class="modal__flex">
           <a class="modal__link  modal__link--facebook" href="#">Facebook</a>
