--- a/dating/index.html
+++ b/dating/index.html
@@ -35,5 +35,21 @@
       </div>
     </div>
   </div>
+  <div class="girl">
+    <div class="container">
+      <h2 class="girl__name">girl Girls</h2>
+      <div class="girl__flex">
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+      </div>
+    </div>
+  </div>
 </body>
 </html>
