--- a/dating/index.html
+++ b/dating/index.html
@@ -6,6 +6,10 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Dating with Stas</title>
   <link rel="stylesheet" href="css/style.min.css">
+  <!-- Favicon -->
+  
+  <!-- Slick -->
+  <link rel="stylesheet" href="slick/slick.css">
 </head>
 <body>
   <div class="title">
@@ -37,11 +41,146 @@
   </div>
   <div class="girl">
     <div class="container">
-      <h2 class="girl__name">girl Girls</h2>
+      <h2 class="girl__title">Top Girls</h2>
       <div class="girl__flex">
         <div class="girl__box">
           <a class="girl__link" href="#">
-            <img src="img/girl-1.jpg" alt="Viviana">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
+          </a>
+          <span class="girl__status">Online</span>
+          <b class="girl__name">Viviana, 37</b>
+          <p class="girl__country">Bogota, Colombia</p>
+          <a class="girl__contact" href="#">Contact Her</a>
+        </div>
+        <div class="girl__box">
+          <a class="girl__link" href="#">
+            <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
           <b class="girl__name">Viviana, 37</b>
@@ -51,5 +190,173 @@
       </div>
     </div>
   </div>
+  <section class="features">
+    <div class="container">
+      <h2 class="features__title">Features</h2>
+      <div class="features__flex">
+        <div class="features__box  features__box--chat">
+          <b class="features__name">Live chat</b>
+          <p class="features__text">Communicate with the girls online, invite them to video chat and give the special real gifts.</p>
+        </div>
+        <div class="features__box  features__box--message">
+          <b class="features__name">Messages</b>
+          <p class="features__text">Write letters and surprise the girls with his verses, whether true romantic.</p>
+        </div>
+        <div class="features__box  features__box--date">
+          <b class="features__name">Real Dates</b>
+          <p class="features__text">Communicate with the girls online, invite them to video chat and give the special real gifts.</p>
+        </div>
+        <div class="features__box  features__box--contact">
+          <b class="features__name">Contact info</b>
+          <p class="features__text">Communicate with the girls online, invite them to video chat and give the special real gifts.</p>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="how-it-work">
+      <div class="control">
+          <button class="btn nav next"><i class="fa fa-angle-right" aria-hidden="true"></i></button><br />
+          <button class="btn nav prev"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
+      </div>
+      <div class="carousel">
+          <div class="item" style="background-image: url(img/slide1/bg.jpg)" data-pag-icon="img/slide1/icon.png">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-md-5 col-sm-6 box">
+                          <h1 class="white med">How it works</h1>
+                          <h2 class="white">Create your personal profile</h2>
+                          <p class="white fz18">With a simple and quick registration you will have access to a huge base of girls that are looking for a pair.</p>
+                      </div>
+                  </div>
+              </div>
+              <img src="img/slide1/laptop.jpg" alt="step1" class="parallax" />
+          </div>
+          <div class="item" style="background-image: url(img/slide2/bg.jpg)" data-pag-icon="img/slide2/icon.png">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-md-5 col-sm-6 box">
+                          <h1 class="white med">How it works</h1>
+                          <h2 class="white">Find girls with common interests</h2>
+                          <p class="white fz18">With a simple and quick registration you will have access to a huge base of girls that are looking for a pair.</p>
+                      </div>
+                  </div>
+              </div>
+              <img src="img/slide2/laptop.jpg" alt="step2" class="parallax" />
+          </div>
+          <div class="item" style="background-image: url(img/slide3/bg.jpg)" data-pag-icon="img/slide3/icon.png">
+              <div class="container">
+                  <div class="row">
+                      <div class="col-md-5 col-sm-6 box">
+                          <h1 class="white med">How it works</h1>
+                          <h2 class="white">Contact girls and find your love</h2>
+                          <p class="white fz18">With a simple and quick registration you will have access to a huge base of girls that are looking for a pair.</p>
+                      </div>
+                  </div>
+              </div>
+              <img src="img/slide3/laptop.jpg" alt="step3" class="parallax" />
+          </div>
+      </div>
+  </section>
+  <section class="love-stories">
+      <h1 class="black sbold">Love stories</h1>
+      <h2 class="med">Real stories from our users</h2>
+      <div class="container">
+          <div class="row">
+              <div class="col-xs-12">
+                  <div class="preview">
+                      <div class="item" data-id="1">
+                          <ul>
+                              <li><img src="img/love-stories/1.jpg" alt="love stories"></li>
+                              <li><img src="img/love-stories/2.jpg" alt="love stories"></li>
+                              <li><img src="img/love-stories/3.jpg" alt="love stories"></li>
+                          </ul>
+                          <h3>It is really cool to meet different people who come from different backgrounds than your own but have similar interests and values. y dating prospects in Tennessee were getting pretty poor, so I decided to try dating globally… I met Olivia from France on Dating.com and we can’t stop messaging each other!</h3>
+                      </div>
+                      <div class="item" data-id="2">
+                          <ul>
+                              <li><img src="img/love-stories/2.jpg" alt="love stories"></li>
+                              <li><img src="img/love-stories/3.jpg" alt="love stories"></li>
+                              <li><img src="img/love-stories/1.jpg" alt="love stories"></li>
+                          </ul>
+                          <h3>Lorem ipsum dolor sit amet, albucius delicata per an, eum modo tale veniam et. Mel id etiam suscipit, incorrupte percipitur in nec, qui at nostrum offendit. Ad fuisset percipitur nec, est nisl atqui maiorum cu, vel ex dignissim honestatis. Duo zril dolore te, mei omnis mundi maluisset te. Noster salutandi patrioque eam eu. Eu pro luptatum deterruisset, utinam periculis gloriatur ex vis.</h3>
+                      </div>
+                      <div class="item" data-id="3">
+                          <ul>
+                              <li><img src="img/love-stories/3.jpg" alt="love stories"></li>
+                              <li><img src="img/love-stories/1.jpg" alt="love stories"></li>
+                              <li><img src="img/love-stories/2.jpg" alt="love stories"></li>
+                          </ul>
+                          <h3>In sea lucilius vituperata dissentiet, eum ad oratio mnesarchum, tale mazim cum eu. Qui eu elit omnes latine, tritani fabellas eum ut. Quo velit urbanitas cu. Est et quis audiam. Animal aeterno delicatissimi at sea, et nullam dolorum fierent eos, etiam officiis lobortis vim te.</h3>
+                      </div>
+                      <div class="item" data-id="4">
+                          <ul>
+                              <li><img src="img/love-stories/2.jpg" alt="love stories"></li>
+                              <li><img src="img/love-stories/1.jpg" alt="love stories"></li>
+                              <li><img src="img/love-stories/3.jpg" alt="love stories"></li>
+                          </ul>
+                          <h3>In sea lucilius vituperata dissentiet, eum ad oratio mnesarchum, tale mazim cum eu. Qui eu elit omnes latine, tritani fabellas eum ut. Quo velit urbanitas cu.</h3>
+                      </div>
+                  </div>
+              </div>
+              <div class="col-md-6 col-md-offset-3 col-sm-10 col-sm-offset-1">
+                  <button class="btn nav prev"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
+                  <button class="btn nav next"><i class="fa fa-angle-right" aria-hidden="true"></i></button>
+                  <ul class="carousel">
+                      <li data-preview="1">
+                         <img src="./img/love-stories/p1.jpg" alt="">
+                         <h3 class="ttu bold">Patrick Nyman</h3>
+                         <h4 class="grey">Self employed</h4>
+                      </li>
+                      <li data-preview="2">
+                          <img src="./img/love-stories/p2.jpg" alt="">
+                          <h3 class="ttu bold">Ricky Martin</h3>
+                          <h4 class="grey">Free</h4>
+                      </li>
+                      <li data-preview="3">
+                          <img src="./img/love-stories/p3.jpg" alt="">
+                          <h3 class="ttu bold">Josh Bush</h3>
+                          <h4 class="grey">Self employed</h4>
+                      </li>
+                      <li data-preview="4">
+                          <img src="./img/love-stories/p2.jpg" alt="">
+                          <h3 class="ttu bold">Mr Who</h3>
+                          <h4 class="grey">Free</h4>
+                      </li>
+                  </ul>
+              </div>
+          </div>
+      </div>
+  </section>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer__flex">
+        <a class="nav__logo" href="#">
+          <img src="img/logo.svg" alt="Dating with Stas">
+          <p class="nav__text">Dating</p>
+        </a>
+        <ul class="footer__list">
+          <li><a href="#" class="footer__item">Contact</a></li>
+          <li><a href="#" class="footer__item">Affiliate program</a></li>
+          <li><a href="#" class="footer__item">Terms and Conditions</a></li>
+          <li><a href="#" class="footer__item">Privacy Policy</a></li>
+          <li><a href="#" class="footer__item">Support</a></li>
+        </ul>
+        <ul class="footer__social">
+          <li><a href="#" class="footer__media  footer__media--vk">VK</a></li>
+          <li><a href="#" class="footer__media  footer__media--fb">Facebook</a></li>
+          <li><a href="#" class="footer__media  footer__media--tw">Twitter</a></li>
+          <li><a href="#" class="footer__media  footer__media--tm">Tumblr</a></li>
+          <li><a href="#" class="footer__media  footer__media--in">Instagram</a></li>
+        </ul>
+      </div>
+      <p class="footer__copyright">© Dating 2018. All rights reserved.</p>
+    </div>
+  </footer>
+  <script src="js/jquery-3.2.0.min.js"></script>
+  <script src="js/bootstrap.min.js"></script>
+  <script src="js/bootstrap-select.min.js"></script>
+  <script src="js/jqBootstrapValidation.js"></script>
+  <script src="slick/slick.js"></script>
+  <script src="js/script.js?ver=<?php echo time();?>"></script>
 </body>
 </html>
