--- a/dating/index.html
+++ b/dating/index.html
@@ -214,46 +214,44 @@
     </div>
   </section>
   <section class="how-it-work">
-      <div class="control">
-          <button class="btn nav next"><i class="fa fa-angle-right" aria-hidden="true"></i></button><br />
-          <button class="btn nav prev"><i class="fa fa-angle-left" aria-hidden="true"></i></button>
-      </div>
+    <div class="control">
+      <button class="btn nav next">
+        <!-- <i class="fa fa-angle-right" aria-hidden="true"></i> -->
+      </button>
+      <button class="btn nav prev">
+        <!-- <i class="fa fa-angle-left" aria-hidden="true"></i> -->
+      </button>
+    </div>
       <div class="carousel">
-          <div class="item" style="background-image: url(img/slide1/bg.jpg)" data-pag-icon="img/slide1/icon.png">
-              <div class="container">
-                  <div class="row">
-                      <div class="col-md-5 col-sm-6 box">
-                          <h1 class="white med">How it works</h1>
-                          <h2 class="white">Create your personal profile</h2>
-                          <p class="white fz18">With a simple and quick registration you will have access to a huge base of girls that are looking for a pair.</p>
-                      </div>
-                  </div>
-              </div>
-              <img src="img/slide1/laptop.jpg" alt="step1" class="parallax" />
+        <div class="item" style="background-image: url(img/slide1/bg.jpg)" data-pag-icon="img/slide1/icon.png">
+          <div class="container">
+            <div class="how-it-work__box">
+                <h1 class="how-it-work__name">How it works</h1>
+                <h2 class="">Create your personal profile</h2>
+                <p class="">With a simple and quick registration you will have access<br>to a huge base of girls that are looking for a pair.</p>
+            </div>
           </div>
+          <img src="img/slide1/laptop.jpg" alt="step1" class="parallax" />
+        </div>
           <div class="item" style="background-image: url(img/slide2/bg.jpg)" data-pag-icon="img/slide2/icon.png">
-              <div class="container">
-                  <div class="row">
-                      <div class="col-md-5 col-sm-6 box">
-                          <h1 class="white med">How it works</h1>
-                          <h2 class="white">Find girls with common interests</h2>
-                          <p class="white fz18">With a simple and quick registration you will have access to a huge base of girls that are looking for a pair.</p>
-                      </div>
-                  </div>
+            <div class="container">
+              <div class="">
+                <h1 class="how-it-work__name">How it works</h1>
+                <h2 class="">Find girls with common interests</h2>
+                <p class="">With a simple and quick registration you will have access<br>to a huge base of girls that are looking for a pair.</p>
               </div>
-              <img src="img/slide2/laptop.jpg" alt="step2" class="parallax" />
+            </div>
+            <img src="img/slide2/laptop.jpg" alt="step2" class="parallax" />
           </div>
           <div class="item" style="background-image: url(img/slide3/bg.jpg)" data-pag-icon="img/slide3/icon.png">
-              <div class="container">
-                  <div class="row">
-                      <div class="col-md-5 col-sm-6 box">
-                          <h1 class="white med">How it works</h1>
-                          <h2 class="white">Contact girls and find your love</h2>
-                          <p class="white fz18">With a simple and quick registration you will have access to a huge base of girls that are looking for a pair.</p>
-                      </div>
-                  </div>
+            <div class="container">
+              <div class="">
+                <h1 class="how-it-work__name">How it works</h1>
+                <h2 class="">Contact girls and find your love</h2>
+                <p class="">With a simple and quick registration you will have access<br>to a huge base of girls that are looking for a pair.</p>
               </div>
-              <img src="img/slide3/laptop.jpg" alt="step3" class="parallax" />
+            </div>
+            <img src="img/slide3/laptop.jpg" alt="step3" class="parallax" />
           </div>
       </div>
   </section>
@@ -353,10 +351,7 @@
     </div>
   </footer>
   <script src="js/jquery-3.2.0.min.js"></script>
-  <script src="js/bootstrap.min.js"></script>
-  <script src="js/bootstrap-select.min.js"></script>
-  <script src="js/jqBootstrapValidation.js"></script>
   <script src="slick/slick.js"></script>
-  <script src="js/script.js?ver=<?php echo time();?>"></script>
+  <script src="js/script.js"></script>
 </body>
 </html>
