--- a/dating/index.html
+++ b/dating/index.html
@@ -7,7 +7,19 @@
   <title>Dating with Stas</title>
   <link rel="stylesheet" href="css/style.min.css">
   <!-- Favicon -->
-  
+  <link rel="icon" type="image/svg+xml" href="img/favicon/favicon.svg">
+  <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="img/favicon/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="194x194" href="img/favicon/favicon-194x194.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="img/favicon/android-chrome-192x192.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="img/favicon/favicon-16x16.png">
+  <link rel="manifest" href="site.webmanifest">
+  <link rel="mask-icon" href="img/favicon/safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="shortcut icon" href="favicon.ico">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="img/favicon/mstile-144x144.png">
+  <meta name="msapplication-config" content="browserconfig.xml">
+  <meta name="theme-color" content="#7480d0">
   <!-- Slick -->
   <link rel="stylesheet" href="slick/slick.css">
 </head>
@@ -17,7 +29,11 @@
       <header class="header">
         <nav class="nav">
           <a class="nav__logo" href="#">
-            <img src="img/logo.svg" alt="Dating with Stas">
+            <picture>
+             <source srcset="img/logo.png" media="(min-width: 770px)">
+             <source srcset="img/logo-color.png" media="(max-width: 770px)">
+             <img src="img/logo.png" alt="Dating with Stas">
+            </picture>
             <p class="nav__text">Dating</p>
           </a>
           <ul class="nav__list">
@@ -26,6 +42,7 @@
             <li><a href="#" class="nav__item">How it works?</a></li>
             <li><a href="#" class="nav__item">About Us</a></li>
           </ul>
+          <button class="nav__toggle" type="button">Open Menu</button>
         </nav>
       </header>
       <div class="title__content">
@@ -329,7 +346,7 @@
     <div class="container">
       <div class="footer__flex">
         <a class="nav__logo" href="#">
-          <img src="img/logo.svg" alt="Dating with Stas">
+          <img src="img/logo.png" alt="Dating with Stas">
           <p class="nav__text">Dating</p>
         </a>
         <ul class="footer__list">
