add mobile button

--- a/dating/index.html
+++ b/dating/index.html
@@ -47,11 +47,11 @@
       </header>
       <div class="title__content">
         <h1 class="title__name">Dating with Stas</h1>
-        <p class="title__text">Service for a find of love.<br>One Date one Love.</p>
+        <p class="title__text">Service for a find of love. One Date one Love.</p>
         <div class="title__links">
-          <a class="button  button--small  button--orange" href="#">Registration</a>
-          <a class="button  button--small  button--violet" href="#">Sign In</a>
-          <a class="button  button--medium  button--facebook" href="#">Sign up with Facebook</a>
+          <a class="button  button--small  button--orange  title__button" href="#">Registration</a>
+          <a class="button  button--small  button--violet  title__button" href="#">Sign In</a>
+          <a class="button  button--medium  button--facebook  title__button" href="#">Sign up with Facebook</a>
         </div>
       </div>
     </div>
@@ -65,144 +65,272 @@
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
         <div class="girl__box">
           <a class="girl__link" href="#">
             <img class="girl__photo" src="img/girl-1.jpg" alt="Viviana">
           </a>
           <span class="girl__status">Online</span>
-          <b class="girl__name">Viviana, 37</b>
-          <p class="girl__country">Bogota, Colombia</p>
-          <a class="girl__contact" href="#">Contact Her</a>
+          <div class="girl__desc">
+            <b class="girl__name">Viviana, 37</b>
+            <p class="girl__country">Bogota, Colombia</p>
+            <div class="girl__links">
+              <a class="girl__control  girl__control--gift" href="#">Gift</a>
+              <a class="girl__control  girl__control--favorite" href="#">Favorite</a>
+              <a class="girl__control  girl__control--message" href="#">Message</a>
+              <a class="girl__control  girl__control--chat" href="#">Chat</a>
+            </div>
+            <a class="girl__contact" href="#">Contact Her</a>
+          </div>
         </div>
       </div>
     </div>
