--- a/market/index.html
+++ b/market/index.html
@@ -207,7 +207,7 @@
           <li>Constant dicrease in trading<br>liquidity of cryptocurrency</li>
           <li>Lack of interest in project<br>from cryptocommunity</li>
         </ol>
-        <img src="uploads/desktop-hd.png" alt="">
+        <img class="pulled__img" src="uploads/desktop-hd.png" alt="">
       </div>
     </section>
 
@@ -215,7 +215,9 @@
       <h2 class="fix__title">We fix the situation -</h3>
       <p class="fix__subtitle">Link work trading and communication</p>
     </section>
-    <img class="fix__mockup" src="uploads/fix-bg.png" alt="">
+    <div class="fix__inner">
+      <img class="fix__mockup" src="uploads/fix-bg.png" alt="">
+    </div>
 
     <section class="art  wrapper">
       <div class="art__flex">
